[package]
name = "fetch-modi"
version = "0.1.0"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
str-macro = "0.1.4"
dialoguer = "0.5.0"
console = "0.10.0"
radix_fmt = "1.0.0"
