[package]
name = "fetch-modi"
version = "0.1.1"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
license-file = "LICENSE"
description = "datastructures that nobody would ever want"
repository = "https://github.com/barrowsys/fetch-modi"
readme = "README.md"
categories = ["data-structures", "command-line-utilities", "games", "simulation"]
keywords = ["homestuck"]
exclude = [".github/*"]

[dependencies]
str-macro = "0.1.4"
dialoguer = "0.5.0"
console = "0.10.0"
radix_fmt = "1.0.0"

[badges]
maintenance = { status = "experimental" }
